--- a/Conversa/Base.lproj/LaunchScreen.storyboard
+++ b/Conversa/Base.lproj/LaunchScreen.storyboard
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,16 +22,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="im_logo" translatesAutoresizingMaskIntoConstraints="NO" id="gSB-v0-xgv">
-                                <rect key="frame" x="118" y="216.5" width="84" height="84"/>
+                                <rect key="frame" x="112.5" y="236.5" width="95" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gSB-v0-xgv" secondAttribute="height" multiplier="1:1" id="VuN-5J-k5b"/>
-                                    <constraint firstAttribute="height" constant="84" id="cwZ-y7-buj"/>
+                                    <constraint firstAttribute="height" constant="95" id="cwZ-y7-buj"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="gSB-v0-xgv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" multiplier="0.91" id="BlB-Oy-qxs"/>
+                            <constraint firstItem="gSB-v0-xgv" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="BlB-Oy-qxs"/>
                             <constraint firstItem="gSB-v0-xgv" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zbm-u1-mUD"/>
                         </constraints>
                     </view>
@@ -44,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="im_logo" width="170" height="170"/>
+        <image name="im_logo" width="333" height="333"/>
     </resources>
 </document>
